# datalake-nba

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml
.dvc/: config
datalake_nba/: config.py  db_utils.py  etl_utils.py  run.py  tasks_utils.py
datalake_nba/nba_bronze/: __init__.py  box_scores.py  playbyplayv3.py  shotchartdetail.py  team_game_logs.py
datalake_nba/utils/: db.py  decorators.py
db/: nba.duckdb.dvc
pwsh/: Update-NBADataLake.ps1
sql/: bronze_tables.sql  schemas.sql
