[tool.poetry]
name = "datalake-nba"
version = "0.1.0"
description = ""
authors = ["Silas Genário <silasge.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "datalake_nba"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
nba-api = "^1.3.1"
tqdm = "^4.66.1"
duckdb = "0.9.1"
dvc = "^3.27.0"
dvc-gdrive = "^2.20.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
get_nba_bronze = "datalake_nba.run:run_nba_bronze"

[tool.black]
line-lenght = 79
include = '\.piy?$'
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 )/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
